added a paragraph describing the purpose of the project

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,7 +13,11 @@
         {{>header}}
         <img class="portrait" src="/img/goku-in-suit-altin-smaili.jpg">
     </div>
-    
+    <p>
+        Hey, my name is Goku, after defeating Frieza, i returned to Earth and worked to set up my first startup
+        its called, Scouter, this device allows you to scan the "Chi" level of nearby objects and warn you for possible
+        threats. Served to you by "Hating-Vegeta-Team"
+    </p>
     {{>footer}}
 </body>
 
